pygobject (3.8.0-2) UNRELEASED; urgency=low

  * debian/tests/python[23]-dbg: Redirect stderr to stdout, to avoid the
    "[xxx refs]" error message failing the tests.
  * Bump Standards-Version to 3.9.4. No changes necessary.

 -- Martin Pitt <mpitt@debian.org>  Wed, 27 Mar 2013 09:11:57 +0100

pygobject (3.8.0-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * New upstream release.
  * debian/rules:
    + Unconditionally run the tests again, since the problem is not
      kernel related.
  * debian/patches/01_cairo_region.patch,
    debian/control.in:
    + Add a foreign type for cairo_region_t. Bump py3cairo build/binary
      dependencies. (LP: #1028115, bgo #667959). Thanks to Martin Pitt
      for this change.

  [ Martin Pitt ]
  * debian/rules: Set $HOME to debian/tmp/home, so that the testsuite has a
    writeable home directory for D-BUS sockets and XDG data. This fixes the
    eternal hangs in sbuild.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 26 Mar 2013 10:15:24 +0100

pygobject (3.7.92-3) experimental; urgency=low

  [ Martin Pitt ]
  * debian/rules: The test suite causes an eternal hang on Debian's buildds,
    presumably due to running on very old kernels (2.6.32). This needs more
    debugging, but skip the tests for kernels < 3.4 for now.

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 24 Mar 2013 09:01:32 +0100

pygobject (3.7.92-2) experimental; urgency=low

  * debian/control.in:
    + Bump gobject-introspection packages minimum build dependency
      in an attempt to fix the test suite in the buildds where it's
      currently hanging.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 19 Mar 2013 14:06:39 +0100

pygobject (3.7.92-1) experimental; urgency=low

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 18 Mar 2013 20:59:27 +0100

pygobject (3.7.91.1-1) experimental; urgency=low

  * New upstream release.
    - Works nicely with GLib >= 2.35.4. Closes: #702603.
    - debian/control.in: