@@ -10,6 +10,12 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 PYVERS := $(shell pyversions --requested -v debian/control) $(shell py3versions --supported -v)
 FLAVOURS := $(PYVERS) $(patsubst %,%-dbg,$(PYVERS))
 
+TESTSUITE_FAIL_CMD=exit 1
+ifneq ($(findstring $(DEB_BUILD_ARCH), s390x mipsel),)
+# tests currently fail on these architectures
+    TESTSUITE_FAIL_CMD=true
+endif
+
 configure_flags += \
 		--disable-silent-rules \
 		$(NULL)
@@ -32,7 +38,7 @@ override_dh_auto_build:
 override_dh_auto_test:
 	set -e; export HOME=$(CURDIR)/debian/tmp/home; mkdir -p $$HOME/.local/share; unset LD_PRELOAD; \
 	for x in $(FLAVOURS); do \
-	        xvfb-run dh_auto_test --builddirectory=build-$$x || true; \
+	        xvfb-run dh_auto_test --builddirectory=build-$$x || $(TESTSUITE_FAIL_CMD); \
 	        while [ -e /tmp/.X99-lock ]; do echo "Waiting for xvfb to finish..."; sleep 0.5; done; \
 	done; \
 
